# prints-ng

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
prints/: __init__.py  cli.py  constants.py  params.py  utils.py
prints/models/: _benchmaster.py  bench_leg_hanger.py  cord_clamp.py  dehydrator_tray.py  excalibur_dehydrator.py  led_ring.py  ring.py  roll_spool_dowel.py  roll_spool_holder.py  sonos_stand.py  sonos_stand_foot.py  sphere_sander.py  telescoping_box.py
prints_test/: test_cli.py  test_params.py  test_prints.py  test_utils.py
